# mons

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mons  mons.bat  mons.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  config.rst  everest.rst  glossary.rst  index.rst  mods.rst  overlayfs.rst
docs/_extensions/: autodoc_ext.py  glossarygen.py  manpages_ext.py
docs/_static/: post_process.js
docs/_templates/: project_links.html
extras/: README.md  mons.desktop
mons/: __main__.py  _install_impl.py  baseUtils.py  clickExt.py  commands.py  config.py  downloading.py  errors.py  formatting.py  fs.py  install.py  logging.py  modmeta.py  mons.py  overlayfs.py  platforms.py  sources.py  spec.py  utils.py  version.py
mons/commands/: main.py  mods.py
tests/: conftest.py  test_config.py  test_formatting.py  test_version.py
tests/integration/: conftest.py  test_clickExt.py  test_commands.py  test_help.py  test_main_install.py  test_mods_resolve.py  test_overlay.py
tests/integration/application/: conftest.py  outputs.py  test_install.py  test_mods.py  test_setup.py
tests/integration/application/_data/: build_list
