[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm[toml]>=7.1",
    "wheel>=0.38.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pyright]
include = ["mons"]
exclude = ["mons/overlayfs.py"]

executionEnvironments = [
     { root = "mons/overlayfs.py", pythonPlatform = "Linux" },
     { root = "." }
]
