[metadata]
name = mons
version = 1.0.4
author = ColoursOfNoise
author_email = coloursofthenoise@gmail.com
description = A command-line mod installer and manager for Celeste
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coloursofnoise/mons
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    dnfile
    click
package_dir =
packages = find:

[options.entry_points]
console_scripts =
    mons = mons.mons:cli
