[metadata]
name = mons
author = ColoursOfNoise
author_email = coloursofthenoise@gmail.com
description = A command-line mod installer and manager for Celeste
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coloursofnoise/mons
project_urls =
    Documentation = https://mons.coloursofnoise.ca
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    dnfile
    pefile
    click >= 8.0.2
    tqdm
    xxhash
    pyyaml
    urllib3
    platformdirs
    typing_extensions;python_version<'3.10'
    importlib_resources;python_version<'3.10'
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = mons*

[options.entry_points]
console_scripts =
    mons = mons.mons:cli
